--- a/geopro.yaml
+++ b/geopro.yaml
@@ -8,7 +8,7 @@ esp32:
     type: esp-idf
 
 logger:
-  level: DEBUG
+  level: INFO
   baud_rate: 0
 
 globals:
@@ -569,12 +569,8 @@ binary_sensor:
     icon: "mdi:radiator"
 
 uart:
-  rx_pin:
-    number: GPIO3
-    mode:
-      input: true
-      pullup: true
-  tx_pin: GPIO1
+  tx_pin: GPIO4
+  rx_pin: GPIO16
   baud_rate: 4800
   data_bits: 8
   parity: NONE
