Add default icons and improve component polish
- Add default icons to all sensor types:
  * Temperature sensors: mdi:thermometer
  * Valve sensors: mdi:valve
  * Hour counters: mdi:clock
  * Bank sensors: mdi:chart-line, mdi:temperature-celsius, mdi:clock, mdi:gauge

- Update polling interval from 1s to 10s for better efficiency
  while maintaining responsiveness for heat pump sensors

- Update example configuration to include all available sensors
  (l1_room, free_measurement, status_word)

- Update README.md with accurate information and better examples

- Verify binary sensor device classes (both compressor and el_heater
  correctly use DEVICE_CLASS_RUNNING)

This achieves complete feature parity with the original geopro.yaml
implementation and improves the component's usability with proper
default icons and optimized polling intervals.

--- a/example/geopro202s.yaml
+++ b/example/geopro202s.yaml
@@ -29,8 +29,12 @@ geopro_202s:
   # Temperature sensors
   outside_temp:
     name: "Ulkolämpötila"
+  l1_room:
+    name: "L1 Huone"
   l1_supply:
     name: "L1 Menovesi"
+  free_measurement:
+    name: "Vapaa mittaus"
   tank_top_in:
     name: "Varaaja ylä tulo"
   tank_top:
@@ -53,6 +57,10 @@ geopro_202s:
     name: "Sähkövastus tunnit"
   hours_comp:
     name: "Kompressori tunnit"
+
+  # Status word
+  status_word:
+    name: "Tila Muuttuja"
 
   # Status indicators
   compressor:
